исправление ширины таблицы

--- a/src/Template/cup/guestbook/index.twig
+++ b/src/Template/cup/guestbook/index.twig
@@ -27,7 +27,7 @@
                                 <tr>
                                     <th width="15%">Имя</th>
                                     <th width="5%">Статус</th>
-                                    <th>Сообщение</th>
+                                    <th width="55%">Сообщение</th>
                                     <th width="15%">Дата создания</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
