исправление обозначения заголовка страницы

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 
-{% set title = 'ЦУП | 0x12f' %}
+{% block title %}ЦУП CMS{% endblock %}
 
 {% block head %}
     {{ styles.append('https://use.fontawesome.com/releases/v5.11.2/css/all.css') }}
