--- a/theme/default/guestbook.twig
+++ b/theme/default/guestbook.twig
@@ -1,5 +1,7 @@
 {% extends 'main.twig' %}
 
+{% block title %}Гостевая книга | {{ parent() }}{% endblock %}
+
 {% block page %}
     <section class="contact-section">
         <div class="container">
