--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -10,7 +10,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="generator" content="OpenSource CMS (Full free for all) Powered by 0x12f Team" />
-        <title>{% block title deferred %}{{ title }}{% endblock %}</title>
+        <title>
+            {% block title deferred %}{{ title ? title ~ ' | ' : '' }}{{ parameter('common_title') }}{% endblock %}
+        </title>
         {% block head '' %}
 
         {% block stylesheet deferred %}
