--- a/src/Template/cup/field.twig
+++ b/src/Template/cup/field.twig
@@ -46,7 +46,7 @@
         {% set error = 'has-error' %}
     {% endif %}
 
-    <div data-input class="row">
+    <div data-input class="row mb-2">
         {# COMMON LABEL #}
         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
             {{ label|raw }}
