--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -12,10 +12,8 @@
                 <div class="col-xl-6 col-lg-5"></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="user-panel">
-                        {#<div class="up-item">
-                            <i class="flaticon-profile"></i>
-                            <a href="#">Вход</a> или <a href="#">Регистрация</a>
-                        </div>#}
+                        {% include 'common/user.switch.twig' %}
+
                         <div class="up-item float-right">
                             <div class="shopping-card">
                                 <i class="flaticon-bag"></i>
