--- a/theme/default/common/user.switch.twig
+++ b/theme/default/common/user.switch.twig
@@ -5,7 +5,9 @@
     {% if user is empty %}
         <a href="/user/login">Вход</a> или <a href="/user/register">Регистрация</a>
     {% else %}
-        <a href="/user/profile" style="text-decoration: underline;">{{ user.getName('short') }}</a>
+        <a href="/user/profile" style="text-decoration: underline;">
+            {{ user.getName('short')?? user.username }}
+        </a>
 
         {% if user.level == 'admin' %}
             или
