--- a/theme/default/user.login.twig
+++ b/theme/default/user.login.twig
@@ -1,6 +1,6 @@
 {% extends 'main.twig' %}
 
-{% block title %}{{ product.meta.title ? product.meta.title : (product.title ?? 'Товар') }} | {{ parent() }}{% endblock %}
+{% block title %}Вход | {{ parent() }}{% endblock %}
 
 {% block head %}
     {{ parent() }}
