--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -87,7 +87,7 @@
                                         </li>
                                         <li>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="/cup/logout">Выход</a>
+                                            <a class="dropdown-item" href="/user/logout">Выход</a>
                                         </li>
                                     </div>
                                 </ul>
