изменения данных профиля #18

--- a/theme/default/user.profile.twig
+++ b/theme/default/user.profile.twig
@@ -51,7 +51,7 @@
                                 {% include 'mixin/form.twig' with {
                                     'label': 'Телефон',
                                     'type': 'tel',
-                                    'name': 'email',
+                                    'name': 'phone',
                                     'args': {
                                         'value': user.phone
                                     }
