--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -25,9 +25,10 @@
                         <table data-table class="display table table-striped table-hover" >
                             <thead>
                             <tr>
-                                <th width="15%">Имя</th>
+                                <th width="20%">Имя</th>
                                 <th>Тип</th>
                                 <th>Размер</th>
+                                <th width="15%">Привязка</th>
                                 <th width="15%">Дата создания</th>
                                 <th width="10%" class="text-center no-sorting"></th>
                             </tr>
@@ -35,9 +36,19 @@
                             <tbody>
                             {% for item in list %}
                                 <tr>
-                                    <td>{{ item.name }}</td>
+                                    <td>
+                                        <a href="/{{ item.getPublicPath() }}" target="_blank">
+                                            {{ item.getName() }}
+                                            <i class="fas fa-external-link-alt"></i>
+                                        </a>
+                                    </td>
                                     <td>{{ item.type }}</td>
                                     <td>{{ item.getSize() }}</td>
+                                    <td>
+                                        <span data-toggle="tooltip" data-placement="top" title="UUID: {{ item.item_uuid }}">
+                                            {{ reference('/App/Domain/Types/FileItemType::LIST', item.item) }}
+                                        </span>
+                                    </td>
                                     <td>{{ item.date|date('d.m.Y H:i:s') }}</td>
                                     <td class="text-center">
                                         <div class="btn-group dropdown">
