--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -42,53 +42,61 @@
         </a>
     </li>
 
-    <li class="nav-item">
-        <a href="/cup/user">
-            <i class="fas fa-users"></i>
-            <p>Пользователи</p>
-        </a>
-    </li>
+    {% if parameter('user_is_enabled', 'yes') != 'no' %}
+        <li class="nav-item">
+            <a href="/cup/user">
+                <i class="fas fa-users"></i>
+                <p>Пользователи</p>
+            </a>
+        </li>
+    {% endif %}
 
-    <li class="nav-item">
-        <a href="/cup/form">
-            <i class="fas fa-question-circle"></i>
-            <p>Формы</p>
-        </a>
-    </li>
+    {% if parameter('form_is_enabled', 'yes') != 'no' %}
+        <li class="nav-item">
+            <a href="/cup/form">
+                <i class="fas fa-question-circle"></i>
+                <p>Формы</p>
+            </a>
+        </li>
+    {% endif %}
 
-    <li class="nav-item">
-        <a data-toggle="collapse" href="#nav-catalog">
-            <i class="fas fa-store"></i>
-            <p>Каталог</p>
-            <span class="caret"></span>
-        </a>
-        <div class="collapse" id="nav-catalog">
-            <ul class="nav nav-collapse">
-                <li>
-                    <a href="/cup/catalog/order">
-                        <span class="sub-item">Заказы</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/cup/catalog/category">
-                        <span class="sub-item">Категории</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/cup/catalog/product">
-                        <span class="sub-item">Товары</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </li>
+    {% if parameter('catalog_is_enabled', 'yes') != 'no' %}
+        <li class="nav-item">
+            <a data-toggle="collapse" href="#nav-catalog">
+                <i class="fas fa-store"></i>
+                <p>Каталог</p>
+                <span class="caret"></span>
+            </a>
+            <div class="collapse" id="nav-catalog">
+                <ul class="nav nav-collapse">
+                    <li>
+                        <a href="/cup/catalog/order">
+                            <span class="sub-item">Заказы</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/catalog/category">
+                            <span class="sub-item">Категории</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/catalog/product">
+                            <span class="sub-item">Товары</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+    {% endif %}
 
-    <li class="nav-item">
-        <a href="/cup/guestbook">
-            <i class="fas fa-book-reader"></i>
-            <p>Гостевая книга</p>
-        </a>
-    </li>
+    {% if parameter('guestbook_is_enabled', 'yes') != 'no' %}
+        <li class="nav-item">
+            <a href="/cup/guestbook">
+                <i class="fas fa-book-reader"></i>
+                <p>Гостевая книга</p>
+            </a>
+        </li>
+    {% endif %}
 
     <li class="nav-item">
         <a href="/cup/file">
