--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -77,7 +77,7 @@
                                                         </li>
                                                         <li><div class="dropdown-divider"></div></li>
                                                         <li>
-                                                            <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить страницу?');">
+                                                            <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
                                                                 <button type="submit" class="btn btn-link text-danger">
                                                                     <i class="fas fa-trash-alt"></i> Удалить
                                                                 </button>
