--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -17,11 +17,10 @@
                 <form method="post" enctype="multipart/form-data">
                     <div class="card-header">
                         <div class="card-head-row">
-                            <div class="card-title">{{ item.uuid ? 'Редактирование товара ' ~ item.title : 'Создание нового товара' }}</div>
-                            <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-secondary btn-round ml-auto">
+                            <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-secondary btn-icon mr-1">
                                 <i class="fas fa-long-arrow-alt-left"></i>
-                                Назад
                             </a>
+                            <div class="card-title">{{ item.uuid ? 'Редактирование товара ' ~ item.title : 'Создание нового товара' }}</div>
                         </div>
                     </div>
                     <div class="card-body">
