--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -17,11 +17,10 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">Детали полученных данных ({{ item.uuid }})</h4>
-                        <a href="/cup/form/{{ item.form_uuid }}/view" class="btn btn-secondary btn-round ml-auto">
+                        <a href="/cup/form/{{ item.form_uuid }}/view" class="btn btn-secondary btn-icon mr-1">
                             <i class="fas fa-long-arrow-alt-left"></i>
-                            Назад
                         </a>
+                        <h4 class="card-title">Детали полученных данных ({{ item.uuid }})</h4>
                     </div>
                 </div>
                 <div class="card-body">
