Включение/выключение сохранения отправленных заявок по форме
#12

--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -104,12 +104,24 @@
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
                                     'label': 'Включить проверку reCAPTCHA',
-                                    'message': 'Возможность отключить проверку reCAPTCHA индивидуально для текущей формы. По-умолчанию: включена',
+                                    'message': 'Возможность отключить проверку reCAPTCHA индивидуально для текущей формы.<br/>По-умолчанию: включено',
                                     'type': 'select',
                                     'name': 'recaptcha',
                                     'args': {
                                         'option': {'yes':'Да', 'no':'Нет'},
                                         'selected': item.recaptcha ? 'yes' : 'no'
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Сохранять копии заполненных анкет',
+                                    'message': 'По-умолчанию: включено',
+                                    'type': 'select',
+                                    'name': 'save_data',
+                                    'args': {
+                                        'option': {'yes':'Да', 'no':'Нет'},
+                                        'selected': item.save_data ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
