--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -28,10 +28,11 @@
     {{ scripts.append('/assets/js/plugin/jquery.modal/jquery.modal.min.js') }}
     {{ scripts.append('/assets/js/plugin/sweetalert/sweetalert.min.js') }}
     {{ scripts.append('/assets/js/plugin/select2/select2.full.min.js') }}
+    {{ scripts.append('/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js') }}
     {{ scripts.append('/assets/js/plugin/froala/froala_editor.pkgd.js') }}
     {{ scripts.append('/assets/js/plugin/froala/ru.js') }}
 
-    {{ scripts.append('/assets/js/cup.js') }}
+    {{ scripts.append('/assets/js/cup/script.js') }}
 {% endblock %}
 
 {% block body %}
@@ -58,9 +59,10 @@
                 <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
                     <div class="container-fluid">
                         <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                            {% include 'cup/notification.twig' %}
+                            {% include 'cup/task.twig' %}
                             {% include 'cup/quickaction.twig' %}
                             {% include 'cup/trademaster.twig' %}
-                            {% include 'cup/task.twig' %}
 
                             <li class="nav-item">
                                 <a class="nav-link" href="/" target="_blank">
@@ -295,11 +297,22 @@
                             </ul>
                         </nav>
                         <div class="copyright ml-auto">
-                            Сделано с <i class="fa fa-heart heart text-danger"></i> в <a href="https://github.com/alksily">0x12f</a>, {{ 'now'|date('Y') }}
+                            Сделано с <i class="fa fa-heart heart text-danger"></i> в <a href="https://github.com/0x12f">0x12f</a>, {{ 'now'|date('Y') }}
                         </div>
                     </div>
                 </footer>
             </div>
         </div>
     </body>
+
+    {% include 'mixin/pushstream.twig' %}
+
+    <script
+        src="https://browser.sentry-cdn.com/5.7.1/bundle.min.js"
+        integrity="sha384-KMv6bBTABABhv0NI+rVWly6PIRvdippFEgjpKyxUcpEmDWZTkDOiueL5xW+cztZZ"
+        crossorigin="anonymous">
+    </script>
+    <script>
+        Sentry.init({dsn: 'https://34b4961b67774560aa2d4a38f4b79110@sentry.io/1816121'});
+    </script>
 {% endblock %}
